@@ -47,6 +47,8 @@ import org.lflang.util.FileUtil;
 import org.lflang.util.StringUtil;
 import org.lflang.validation.LFValidator;
 
+import com.google.common.collect.ImmutableList;
+
 /**
  * A target properties along with a type and a list of supporting targets
  * that supports it, as well as a function for configuration updates.
@@ -194,7 +196,7 @@ public enum TargetProperty {
      * compiled binary.
      */
     EXTERNAL_RUNTIME_PATH("external-runtime-path", PrimitiveType.STRING,
-            Arrays.asList(Target.CPP), (config, value, err) -> {
+            List.of(Target.CPP), (config, value, err) -> {
                 config.externalRuntimePath = ASTUtils.elementToSingleString(value);
             }),
 
@@ -295,7 +297,16 @@ public enum TargetProperty {
             Arrays.asList(Target.CPP), (config, value, err) -> {
                 config.noRuntimeValidation = ASTUtils.toBoolean(value);
             }),
-    
+
+    /**
+     * Directive to specify the platform for cross code generation.
+     */
+    PLATFORM("platform", UnionType.PLATFORM_UNION, Target.ALL,
+             (config, value, err) -> {
+                 config.platform = (Platform) UnionType.PLATFORM_UNION
+                     .forName(ASTUtils.elementToSingleString(value));
+             }),
+
     /**
      * Directive for specifying .proto files that need to be compiled and their
      * code included in the sources.
@@ -790,6 +801,7 @@ public enum TargetProperty {
                 CoordinationType.CENTRALIZED),
         SCHEDULER_UNION(Arrays.asList(SchedulerOption.values()), SchedulerOption.getDefault()),
         LOGGING_UNION(Arrays.asList(LogLevel.values()), LogLevel.INFO),
+        PLATFORM_UNION(Arrays.asList(Platform.values()), Platform.AUTO),
         CLOCK_SYNC_UNION(Arrays.asList(ClockSyncMode.values()),
                 ClockSyncMode.INIT),
         DOCKER_UNION(Arrays.asList(PrimitiveType.BOOLEAN, DictionaryType.DOCKER_DICT),
@@ -1148,7 +1160,7 @@ public enum TargetProperty {
          * 
          * @param e      The element to type check.
          * @param name   The name of the target property.
-         * @param errors A list of errors to append to if problems are found.
+         * @param v      The validator to which any errors should be reported.
          */
         public void check(Element e, String name, LFValidator v) {
             if (!this.validate(e)) {
@@ -1304,13 +1316,52 @@ public enum TargetProperty {
             return this.name().toLowerCase();
         }
     }
-    
+
+    /**
+     * Enumeration of supported platforms
+     */
+    public enum Platform {
+        AUTO,
+        LINUX("Linux"),
+        MAC("Darwin"),
+        WINDOWS("Windows");
+
+        String cMakeName;
+        Platform() {
+            this.cMakeName = this.toString();
+        }
+        Platform(String cMakeName) {
+            this.cMakeName = cMakeName;
+        }
+
+        /**
+         * Return the name in lower case.
+         */
+        @Override
+        public String toString() {
+            return this.name().toLowerCase();
+        }
+
+        /**
+         * Get the CMake name for the platform.
+         */
+        public String getcMakeName() {
+            return this.cMakeName;
+        }
+    }
+
     /**
      * Supported schedulers.
      * @author{Soroush Bateni <soroush@utdallas.edu>}
      */
     public enum SchedulerOption {
         NP(false),         // Non-preemptive
+        adaptive(false, List.of(
+            Path.of("scheduler_adaptive.c"),
+            Path.of("worker_assignments.h"),
+            Path.of("worker_states.h"),
+            Path.of("data_collection.h")
+        )),
         GEDF_NP(true),    // Global EDF non-preemptive
         GEDF_NP_CI(true); // Global EDF non-preemptive with chain ID
         // PEDF_NP(true);    // Partitioned EDF non-preemptive (FIXME: To be re-added in a future PR)
@@ -1318,17 +1369,30 @@ public enum TargetProperty {
         /**
          * Indicate whether or not the scheduler prioritizes reactions by deadline.
          */
-        private final Boolean prioritizesDeadline;
-        
+        private final boolean prioritizesDeadline;
+
+        /** Relative paths to files required by this scheduler. */
+        private final List<Path> relativePaths;
+
+        SchedulerOption(boolean prioritizesDeadline) {
+            this(prioritizesDeadline, null);
+        }
+
+        SchedulerOption(boolean prioritizesDeadline, List<Path> relativePaths) {
+            this.prioritizesDeadline = prioritizesDeadline;
+            this.relativePaths = relativePaths;
+        }
+
         /**
          * Return true if the scheduler prioritizes reactions by deadline.
          */
-        public Boolean prioritizesDeadline() {
+        public boolean prioritizesDeadline() {
             return this.prioritizesDeadline;
         }
-        
-        private SchedulerOption(Boolean prioritizesDeadline) {
-            this.prioritizesDeadline = prioritizesDeadline;
+
+        public List<Path> getRelativePaths() {
+            return relativePaths != null ? ImmutableList.copyOf(relativePaths) :
+                   List.of(Path.of("scheduler_" + this + ".c"));
         }
         
         public static SchedulerOption getDefault() {
